2003-07-29  Bastien Nocera  <hadess@hadess.net>

	* README: removed TODO item
	* src/totem.c: (popup_hide), (totem_callback_connect): hide the popups
	when we're changing workspaces so that they don't follow us around

2003-07-28  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am:
	* src/bacon-cd-selection.h: upd from libbacon
	* src/bacon-v4l-selection.[ch]:
	* src/video-dev.[ch] added the V4l Video device selection widget
	from libbacon

2003-07-26  Bastien Nocera  <hadess@hadess.net>

	* README: upd
	* src/totem-remote.c: (totem_remote_init): make lirc silent on startup

2003-07-25  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-xine.c: (bacon_video_widget_realize),
	(bacon_video_widget_set_visuals): switch on-the-fly between visual
	plugins

2003-07-24  Bastien Nocera  <hadess@hadess.net>

	* src/cd-drive.c: (get_device_max_speed), (get_scsi_cd_name),
	(add_linux_cd_recorder): upd from libbacon
	* src/totem-playlist.[ch]: couple of coding style cleanups
	* src/totem.c: (on_got_metadata_event): update the playlist title
	when playing a CD with CDDB

2003-07-23  Bastien Nocera  <hadess@hadess.net>

	* data/vanity.glade: removed the placeholder
	* src/Makefile.am:
	* src/gtk-playlist.[ch]:
	* src/totem-playlist.[ch]:
	* src/totem-playlist.h:
	* src/totem-private.h:
	* src/totem.c: renamed the GtkPlaylist widget to TotemPlaylist

2003-07-22  Wang Jian  <lark@linux.net.cn>

	* configure.in: Added "zh_CN" to ALL_LINGUAS.

2003-07-19  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am: link vanity against the gnome-vfs authentication
	manager (fixes building on GNOME 2.2.x)

2003-07-18  Bastien Nocera  <hadess@hadess.net>

	* src/.cvsignore: upd
	* src/Makefile.am: upd
	* src/bacon-video-widget-xine.c: (bacon_video_widget_unrealize),
	(bacon_video_widget_new): fixed 2 potential crashes
	* src/bvw-test.c: added a test program
	* src/totem.c: (on_video_motion_notify_event): maybe fix the popup
	placement issue for good?
